--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -6,80 +6,120 @@
 #        |___/|_|                           
 # 
 
+
 background {
     monitor =
-#    path = $HOME/.cache/blurred_wallpaper.png   # only png supported for now
-    path = $HOME/Pictures/Wallpappers/wall_1_blur.png
+    path = $HOME/Pictures/Wallpappers/wall_1.jpg
+    blur_passes = 1
 }
 
-input-field {
+# Profie-Photo
+# image {
+#     monitor =
+#     path = $HOME/Pictures/Wallpappers/wall_1.jpg
+#     border_size = 2
+#     border_color = rgba(255, 255, 255, 0)
+#     size = 130
+#     rounding = -1
+#     rotate = 0
+#     reload_time = -1
+#     reload_cmd = 
+#     position = 0, 40
+#     halign = center
+#     valign = center
+# }
+
+# Day-Month-Date
+label {
     monitor =
-    size = 300, 50
-    outline_thickness = 3
-    dots_size = 0.33 # Scale of input-field height, 0.2 - 0.8
-    dots_spacing = 0.15 # Scale of dots' absolute size, 0.0 - 1.0
-    dots_center = true
-    dots_rounding = -1 # -1 default circle, -2 follow input-field rounding
-    outer_color = rgb(151515)
-    inner_color = rgb(FFFFFF)
-    font_color = rgb(10, 10, 10)
-    fade_on_empty = true
-    fade_timeout = 1000 # Milliseconds before fade_on_empty is triggered.
-    placeholder_text = <i>Input Password...</i> # Text rendered in the input box when it's empty.
-    hide_input = false
-    rounding = -1 # -1 means complete rounding (circle/oval)
-    check_color = rgb(204, 136, 34)
-    fail_color = rgb(204, 34, 34) # if authentication failed, changes outer_color and fail message color
-    fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i> # can be set to empty
-    fail_transition = 300 # transition time in ms between normal outer_color and fail_color
-    capslock_color = -1
-    numlock_color = -1
-    bothlock_color = -1 # when both locks are active. -1 means don't change outer color (same for above)
-    invert_numlock = false # change color if numlock is off
-    swap_font_color = false # see below
-    position = 0, -20
+    text = cmd[update:1000] echo -e "$(date +"%A, %B %d")"
+    color = rgba(216, 222, 233, 0.70)
+    font_size = 25
+    font_family = SF Pro Display Bold
+    position = 0, 350
     halign = center
     valign = center
 }
 
+
+# Time
 label {
     monitor =
-    #clock
-    text = cmd[update:1000] echo "$TIME"
+    text = cmd[update:1000] echo "<span>$(date +"%H:%M")</span>"
+    color = rgba(216, 222, 233, 0.70)
+    font_size = 120
+    font_family = SF Pro Display Bold
+    position = 0, 250
+    halign = center
+    valign = center
+}
+
+
+# USER-BOX
+shape {
+    monitor =
+    size = 300, 60
+    color = rgba(255, 255, 255, .1)
+    rounding = -1
+    border_size = 0
+    border_color = rgba(253, 198, 135, 0)
+    rotate = 0
+    xray = false # if true, make a "hole" in the background (rectangle of specified size, no rotation)
+
+    position = 0, -130
+    halign = center
+    valign = center
+}
+
+# USER
+label {
+    monitor =
+    text =     $USER
+    color = rgba(216, 222, 233, 0.80)
+    outline_thickness = 2
+    dots_size = 0.2 # Scale of input-field height, 0.2 - 0.8
+    dots_spacing = 0.2 # Scale of dots' absolute size, 0.0 - 1.0
+    dots_center = true
+    font_size = 18
+    font_family = SF Pro Display Bold
+    position = 0, -130
+    halign = center
+    valign = center
+}
+
+# INPUT FIELD
+input-field {
+    monitor =
+    size = 300, 60
+    outline_thickness = 2
+    dots_size = 0.2 # Scale of input-field height, 0.2 - 0.8
+    dots_spacing = 0.2 # Scale of dots' absolute size, 0.0 - 1.0
+    dots_center = true
+    outer_color = rgba(0, 0, 0, 0)
+    inner_color = rgba(255, 255, 255, 0.1)
+    font_color = rgb(200, 200, 200)
+    fade_on_empty = false
+    font_family = SF Pro Display Bold
+    placeholder_text = <i><span foreground="##ffffff99">🔒 Enter Pass</span></i>
+    hide_input = false
+    position = 0, -210
+    halign = center
+    valign = center
+}
+
+
+
+#KEYBOARD LAYOUT
+label {
+    monitor =
+    text = cmd[update:1000] echo "$LAYOUT[en,ru]"
     color = rgba(200, 200, 200, 1.0)
-    font_size = 55
-    font_family = Fira Semibold
-    position = -100, 0
+    font_size = 24
+    font_family = SF Pro Display Bold
+    position = -10, 10
+    fade_on_empty = true
     halign = right
     valign = bottom
     shadow_passes = 5
     shadow_size = 10
 }
-
-label {
-    monitor =
-    text = $USER
-    color = rgba(200, 200, 200, 1.0)
-    font_size = 20
-    font_family = Fira Semibold
-    position = -100, 160
-    halign = right
-    valign = bottom
-    shadow_passes = 5
-    shadow_size = 10
-}
-
-#image {
-#    monitor =
-#    path = $HOME/.cache/square_wallpaper.png
-#    size = 280 # lesser side if not 1:1 ratio
-#    rounding = -1 # negative values mean circle
-#    border_size = 4
-#    border_color = rgb(221, 221, 221)
-#    rotate = 0 # degrees, counter-clockwise
-#    reload_time = -1 # seconds between reloading, 0 to reload with SIGUSR2
-#    reload_cmd =  # command to get new path. if empty, old path will be used. don't run "follow" commands like tail -F
-#    position = 0, 200
-#    halign = center
-#    valign = center
-#}
