split exec-once waybar,swaync, add PrtScn

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -14,7 +14,7 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 #monitor=,preferred,auto,auto
-monitor=eDP-1,3072x1920@165,0x0,1.5,bitdepth,10
+monitor=eDP-1,3072x1920@120,0x0,1.5,bitdepth,10
 #monitor=HDMI-A-1,1920x1080@60,1920x0,1
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -30,6 +30,9 @@ env = QT_QPA_PLATFORM,wayland;xcb
 env = GDK_SCALE,1
 env = XCURSOR_SIZE,24
 
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
+env = XDG_SESSION_DESKTOP,Hyprland
 
 exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"   # for GTK4 apps
 exec = gsettings set org.gnome.desktop.interface gtk-theme Adwaita-dark
@@ -37,7 +40,8 @@ exec-once = /home/kratorr/.condig/hyprland/xdg_portal.sh
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = hyprpaper
-exec-once = waybar & swaync --style $HOME/.config/swaync/style.css --config $HOME/.config/swaync/config.json
+exec-once = waybar
+exec-once = swaync --style $HOME/.config/swaync/style.css --config $HOME/.config/swaync/config.json
 exec-once = nm-applet --indicator
 exec-once = /usr/libexec/polkit-gnome-authentication-agent-1
 exec-once = [workspace 1 silent] flatpak run dev.deedles.Trayscale ----hide-window
@@ -242,5 +246,8 @@ bind = $mainMod, L, exec, hyprlock
 bind = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bind = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%+ # To raise the volume, with a limit of 150%
 bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bind = , Print, exec, grim -g "$(slurp)"
 
+# Screenshot area PrtScn
+bind = , Print, exec, grim -g "$(slurp)"
+# Screent shot full screen LCtrl + PrtScn
+bind = Control_L, Print, exec, grim
