--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -153,7 +153,7 @@ gestures {
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    
+    disable_hyprland_logo = true
     vfr = true
 }
 
